<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMedia">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/addingNewMediaTb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:background="@color/white"
            app:subtitleTextColor="@color/black"
            app:title="@string/adding_new_mdeia"
            android:elevation="12dp"
            app:navigationIcon="@drawable/back_arrow"/>

        <ScrollView
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@color/semiWhite"
                    android:gravity="center">

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/posterPreview"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:padding="3dp"
                        android:scaleType="fitCenter"
                        app:riv_tile_mode="clamp"
                        android:src="@drawable/ic_video_trans"
                        app:riv_border_color="@color/yellow"
                        app:riv_corner_radius="12dp" />

                    <com.devbrackets.android.exomedia.ui.widget.VideoView
                        android:id="@+id/video_preview"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:visibility="gone"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        app:measureBasedOnAspectRatio="true"
                        app:useDefaultControls="true"
                        app:useTextureViewBacking="true"
                        app:videoScale="fitXY" />


                </RelativeLayout>

                <Button
                    android:padding="10dp"
                    android:id="@+id/getMediaB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/list_bg"
                    android:backgroundTint="@color/skyBlue"
                    android:text="@string/get_media"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:fontFamily="serif"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:fontFamily="@font/roboto"
                    android:padding="4dp"
                    android:text="@string/title"
                    android:textColor="@color/slateBlue"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/titleField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/title"

                    android:background="@drawable/rounded_edit_text"
                    android:textColor="@color/black"
                    android:textColorHint="@android:color/darker_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:fontFamily="@font/roboto"
                    android:padding="4dp"
                    android:text="@string/description"
                    android:textColor="@color/slateBlue"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/descriptionField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/description"
                    android:background="@drawable/rounded_edit_text"
                    android:textColor="@color/black"
                    android:textColorHint="@android:color/darker_gray" />

            </LinearLayout>

        </ScrollView>

        <Button
            android:id="@+id/postMtaaButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:background="@drawable/search_bg"
            android:backgroundTint="@color/yellow"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="Post"
            android:textColor="@color/white"
            android:textSize="23sp"
            android:textStyle="bold|italic" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>